@@ -36,7 +36,7 @@ C	[^\n\t ]
 
 database* db;
 
-LOG_LEVEL db_lex_log_level = LOG_LEVEL_DEBUG;
+LOG_LEVEL db_lex_log_level = LOG_LEVEL_TRACE;
 
 #define LOG_AND_RETURN(token) \
     LOG_DB_FORMAT_LINE(db_lex_log_level, "db_lex: %s: '%s'", #token, dbtext) \
@@ -57,21 +57,21 @@ LOG_LEVEL db_lex_log_level = LOG_LEVEL_DEBUG;
 %%
 <INITIAL>"#"[^\n]*"\n" {
             (db->lineno)++;
-            LOG_DB_FORMAT_LINE(db_lex_log_level, "db_lex: skip comment line: '%.*s'", (int) strlen(dbtext)-1, dbtext)
+            LOG_DB_FORMAT_LINE(LOG_LEVEL_DEBUG, "db_lex: skip comment line: '%.*s'", (int) strlen(dbtext)-1, dbtext)
            }
 <INITIAL>^"\n" {
             (db->lineno)++;
-            LOG_DB_FORMAT_LINE(db_lex_log_level, "%s", "db_lex: skip empty line")
+            LOG_DB_FORMAT_LINE(LOG_LEVEL_DEBUG, "%s", "db_lex: skip empty line")
            }
 <INITIAL>^[^\n]*"\n" {
             (db->lineno)++;
-            LOG_DB_FORMAT_LINE(db_lex_log_level, "db_lex: parse '%.*s'", (int) strlen(dbtext)-1, dbtext)
+            LOG_DB_FORMAT_LINE(LOG_LEVEL_DEBUG, "db_lex: parse '%.*s'", (int) strlen(dbtext)-1, dbtext)
             yyless(0);
             BEGIN(DB);
            }
 <INITIAL>^[^\n]* {
             (db->lineno)++;
-            LOG_DB_FORMAT_LINE(db_lex_log_level, "db_lex: parse '%s'", dbtext)
+            LOG_DB_FORMAT_LINE(LOG_LEVEL_DEBUG, "db_lex: parse '%s'", dbtext)
             yyless(0);
             BEGIN(DB);
            }
@@ -94,7 +94,7 @@ LOG_LEVEL db_lex_log_level = LOG_LEVEL_DEBUG;
 }
 
 <DB>"#"[^\n]* { /* inline comment */
-    LOG_DB_FORMAT_LINE(LOG_LEVEL_TRACE, "db_lex: skip inline comment: '%s'", dbtext)
+    LOG_DB_FORMAT_LINE(db_lex_log_level, "db_lex: skip inline comment: '%s'", dbtext)
 }
 
 <DB>({C})+ {
@@ -102,7 +102,7 @@ LOG_LEVEL db_lex_log_level = LOG_LEVEL_DEBUG;
 }
 
 <DB>[ \t] {
-    LOG_DB_FORMAT_LINE(LOG_LEVEL_TRACE, "db_lex: skip tab/whitespace: '%s'", dbtext)
+    LOG_DB_FORMAT_LINE(db_lex_log_level, "db_lex: skip tab/whitespace: '%s'", dbtext)
 }
 
 <DB>"\n" {
